# crisprmutsim

./: .gitignore  README.md  pyproject.toml
src/crisprmutsim/: __main__.py  csv_parser.py  helpers.py
src/crisprmutsim/CRISPR/: array_stats.py  crispr_array.py  dataset_stats.py  dna_sequence.py  raw_crispr_array.py  storage.py
src/crisprmutsim/CRISPR/simulation/: simulation.py
src/crisprmutsim/CRISPR/simulation/events/: crispr_event.py  deletion.py  insertion.py  insertion_deletion.py  mutation.py
src/crisprmutsim/simulation/: event.py  simulation.py
src/crisprmutsim/webapp/: app.py
src/crisprmutsim/webapp/config/: graph_config.py
src/crisprmutsim/webapp/layouts/: dataset_filter.py
src/crisprmutsim/webapp/pages/: array-view.py  dataset-stats.py  home.py
src/crisprmutsim/webapp/pages/_unused/: event_diff.py  test.py  timelines.py
tests/: test_crispr_array.py  test_crispr_events.py  test_dna_sequence.py  test_event_generators.py
